[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/player.gd" type="Script" id=1]
[ext_resource path="res://assets/personagem/Fly (1).png" type="Texture" id=2]
[ext_resource path="res://assets/personagem/Fly (2).png" type="Texture" id=3]
[ext_resource path="res://assets/personagem/Shoot (1).png" type="Texture" id=4]
[ext_resource path="res://assets/personagem/Shoot (2).png" type="Texture" id=5]
[ext_resource path="res://assets/personagem/Shoot (3).png" type="Texture" id=6]
[ext_resource path="res://assets/personagem/Shoot (4).png" type="Texture" id=7]
[ext_resource path="res://assets/personagem/Shoot (5).png" type="Texture" id=8]
[ext_resource path="res://assets/personagem/Dead (1).png" type="Texture" id=9]
[ext_resource path="res://assets/musica/Super Mario - Som do pulo do MÃ¡rio (online-audio-converter.com).wav" type="AudioStream" id=10]
[ext_resource path="res://assets/musica/game_over.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 15.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45.9976, 25.7479 )

[node name="player" type="RigidBody2D"]
gravity_scale = 10.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -7.62939e-06, -1.90735e-05 )
scale = Vector2( 0.231244, 0.2878 )
frames = SubResource( 1 )
animation = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.40305, 2.14838 )
shape = SubResource( 2 )

[node name="flap_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -0.5

[node name="die_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
[connection signal="finished" from="die_audio" to="." method="_on_die_audio_finished"]
